chore: simplify activity summary display, add activity summary widget to chat event list

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5192,5 +5192,6 @@
       }
     }
   },
-  "noDataFound": "No data found"
+  "noDataFound": "No data found",
+  "activityFinishedMessage": "All Finished!"
 }
