chore: make 'generate activities' singular

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4758,7 +4758,7 @@
   "languageOfInstructionsLabel": "Language of activity instructions",
   "targetLanguageLabel": "Target language",
   "cefrLevelLabel": "CEFR level",
-  "generateActivitiesButton": "Generate Activities",
+  "generateActivitiesButton": "Generate Activity",
   "launchActivityButton": "Launch Activity",
   "image": "Image",
   "video": "Video",
