Make search react appropriately to 400+ status codes

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5193,5 +5193,6 @@
     }
   },
   "noDataFound": "No data found",
-  "activityFinishedMessage": "All Finished!"
+  "activityFinishedMessage": "All Finished!",
+  "activitySearchNoSubscription": "No subscription"
 }
