chore: in activity sessions, make the bot settings button invite/kick the bot instead of opening dialog

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5193,5 +5193,7 @@
     }
   },
   "noDataFound": "No data found",
-  "activityFinishedMessage": "All Finished!"
+  "activityFinishedMessage": "All Finished!",
+  "addBot": "Add bot",
+  "kickBot": "Kick bot"
 }
