Use enum for activity search status

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5193,6 +5193,5 @@
     }
   },
   "noDataFound": "No data found",
-  "activityFinishedMessage": "All Finished!",
-  "activitySearchNoSubscription": "No subscription"
+  "activityFinishedMessage": "All Finished!"
 }
