chore: fix overflow in space analytics page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5192,7 +5192,7 @@
       }
     }
   },
-  "noDataFound": "No data found",
+  "noDataFound": "Not found",
   "activityFinishedMessage": "All Finished!",
   "endForAll": "End for all"
 }
