chore: tweaks to styling of not-available space analytics table rows

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5191,7 +5191,7 @@
       }
     }
   },
-  "noDataFound": "Not found",
+  "noDataFound": "No data found",
   "activityFinishedMessage": "All Finished!",
   "endForAll": "End for all"
 }
