set state event on activity completion within course

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5238,5 +5238,6 @@
         "type": "int"
       }
     }
-  }
+  },
+  "activityNotFoundForCourse": "This activity was not found within the course"
 }
