--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5239,5 +5239,6 @@
       }
     }
   },
-  "activityNotFoundForCourse": "This activity was not found within the course"
+  "activityNotFoundForCourse": "This activity was not found within the course",
+  "courseChats": "Course Chats"
 }
