some extra contents in space chat list

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5239,5 +5239,7 @@
     }
   },
   "activityNotFoundForCourse": "This activity was not found within the course",
-  "courseChats": "Course Chats"
+  "courseChats": "Course Chats",
+  "noSessionsFound": "None found. Ready to start?",
+  "myActivitySessions": "My Activity Sessions"
 }
