chore: only show rooms without space parents in main chat list, remove options to add to space and remove from space

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5241,5 +5241,6 @@
   "activityNotFoundForCourse": "This activity was not found within the course",
   "courseChats": "Course Chats",
   "noSessionsFound": "None found. Ready to start?",
-  "myActivitySessions": "My Activity Sessions"
+  "myActivitySessions": "My Activity Sessions",
+  "directMessages": "Direct Messages"
 }
