--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5243,5 +5243,7 @@
   "myActivitySessions": "My Activity Sessions",
   "directMessages": "Direct Messages",
   "whatNow": "What now?",
-  "chooseNextActivity": "Choose your next activity!"
+  "chooseNextActivity": "Choose your next activity!",
+  "seeInstructions": "See Instructions",
+  "hideInstructions": "Hide Instructions"
 }
