chore: add default names to course filters

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5264,5 +5264,6 @@
   "waitNotDone": "Wait I’m not done!",
   "waitingForOthersToFinish": "Waiting for the rest to finish up...",
   "saveToCompletedActivities": "Save to completed activities",
-  "generatingSummary": "Analyzing chat and generating results"
+  "generatingSummary": "Analyzing chat and generating results",
+  "instructionsLanguage": "Instructions language"
 }
