update start page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5196,5 +5196,9 @@
   "@goToCourse": {
     "type": "String",
     "course": {}
-  }
+  },
+  "startNewSession": "Start new session",
+  "joinOpenSession": "Join open session",
+  "less": "less",
+  "activityNotFound": "Activity not found"
 }
