fix: remove dollar sign from copy

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5211,7 +5211,7 @@
       }
     }
   },
-  "othersDoneAndWaiting": "${num1}/{num2} are done. Have you completed your objective?",
+  "othersDoneAndWaiting": "{num1}/{num2} are done. Have you completed your objective?",
   "@othersDoneAndWaiting": {
     "placeholders": {
       "num1": {
