feat: course chats list updates

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5225,5 +5225,7 @@
   "startNewSession": "Start new session",
   "joinOpenSession": "Join open session",
   "less": "less",
-  "activityNotFound": "Activity not found"
+  "activityNotFound": "Activity not found",
+  "myActivities": "My activities",
+  "openToJoin": "Open to join"
 }
