--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5227,5 +5227,7 @@
   "less": "less",
   "activityNotFound": "Activity not found",
   "myActivities": "My activities",
-  "openToJoin": "Open to join"
+  "openToJoin": "Open to join",
+  "results": "Results",
+  "activityDone": "Activity Done!"
 }
