chore: update how activity summary description expansion button layout works

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5230,5 +5230,6 @@
   "myActivities": "My activities",
   "openToJoin": "Open to join",
   "results": "Results",
-  "activityDone": "Activity Done!"
+  "activityDone": "Activity Done!",
+  "moreLabel": "more"
 }
