chore: update messaging in subscription management

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5231,5 +5231,6 @@
   "openToJoin": "Open to join",
   "results": "Results",
   "activityDone": "Activity Done!",
-  "moreLabel": "more"
+  "moreLabel": "more",
+  "promoCodeInfo": "Promo codes can be entered on the next page"
 }
