--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4834,7 +4834,7 @@
   "details": "Details",
   "languageLevelPreA1Desc": "I have never learned or used the language.",
   "languageLevelA1Desc": "I can understand and use some familiar everyday expressions and very basic phrases.",
-  "languageLevelA2Desc": "I can understand sentences and frequently used expressions related to areas of immediate relevance",
+  "languageLevelA2Desc": "I can understand sentences and frequently used expressions related to areas of immediate relevance.",
   "languageLevelB1Desc": "I can deal with most familiar situations and can produce simple connected text on familiar topics.",
   "languageLevelB2Desc": "I can understand the mains ideas of complex texts and interact with a degree of fluency and spontaneity.",
   "languageLevelC1Desc": "I can express ideas fluently and spontaneously without much struggle and understand a wide range of demanding texts.",
