--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5232,5 +5232,7 @@
   "results": "Results",
   "activityDone": "Activity Done!",
   "moreLabel": "more",
-  "promoCodeInfo": "Promo codes can be entered on the next page"
+  "promoCodeInfo": "Promo codes can be entered on the next page",
+  "editsComingSoon": "The ability to edit cities and activities is coming soon.",
+  "editing": "Editing"
 }
