--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5243,5 +5243,8 @@
       }
     }
   },
-  "inviteFriendsToCourse": "Invite friends to my course"
+  "inviteFriendsToCourse": "Invite friends to my course",
+  "subscribeToUnlockActivitySummaries": "Subscribe to unlock activity summaries",
+  "subscribeToUnlockDefinitions": "Subscribe to unlock definitions",
+  "subscribeToUnlockTranscriptions": "Subscribe to unlock transcriptions"
 }
