chore: add snackbar message after pinging course participants

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5246,5 +5246,6 @@
   "inviteFriendsToCourse": "Invite friends to my course",
   "subscribeToUnlockActivitySummaries": "Subscribe to unlock activity summaries",
   "subscribeToUnlockDefinitions": "Subscribe to unlock definitions",
-  "subscribeToUnlockTranscriptions": "Subscribe to unlock transcriptions"
+  "subscribeToUnlockTranscriptions": "Subscribe to unlock transcriptions",
+  "pingSent": "🔔 Course ping sent! 🔔"
 }
