--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4717,7 +4717,7 @@
     }
   },
   "slightlyOffensive": "Slightly offensive",
-  "clickOnEmailLink": "Please click on the link in the email and then proceed. In rare cases, the email can be sent to spam or take up to 5 minutes to arrive.",
+  "clickOnEmailLink": "Please click on the link in the email and then proceed.\n\nCheck your spam folder if the email hasn't arrived.",
   "whoIsAllowedToJoinThisChat": "Who is allowed to join this chat",
   "dontForgetPassword": "Don't forget your password!",
   "enableAutocorrectToolName": "Enable device autocorrect",
