update chat context menus for activities

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5256,5 +5256,6 @@
   "activityStatsButtonInstruction": "Click here to view your activity stats and to close the activity when finished",
   "readingAnalyticsDesc": "Click practice on each message for reading activities.",
   "speakingAnalyticsDesc": "Record voice messages for speaking practice.",
-  "audioAnalyticsDesc": "Click practice on each message for listening activities."
+  "audioAnalyticsDesc": "Click practice on each message for listening activities.",
+  "endActivity": "End activity"
 }
