chore: update some copy in filter dropdowns

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5286,5 +5286,7 @@
   "email": "Email",
   "forgotPassword": "Forgot password?",
   "writingAnalyticsDesc": "Send messages to practice writing.",
-  "endActivity": "End activity"
+  "endActivity": "End activity",
+  "allLanguages": "All languages",
+  "allCefrLevels": "All CEFR levels"
 }
