add UI for giving activity feedback

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5291,5 +5291,9 @@
   "allCefrLevels": "All CEFR levels",
   "chatListTooltip": "Here you’ll find your direct messages! Click on any user’s avatar and “start conversation” to send a DM.",
   "directMessageBotTitle": "Direct message Pangea Bot",
+  "feedbackTitle": "Activity Feedback",
+  "feedbackDesc": "How should the activity be improved? If you can provide some details, we’ll make the change!",
+  "feedbackHint": "Your feedback",
+  "feedbackButton": "Submit feedback",
   "directMessageBotDesc": "Talking to humans is more fun but... AI is always ready!"
 }
