feat: on create course, go to invite page while course creation loads

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5295,5 +5295,8 @@
   "feedbackDesc": "How should the activity be improved? If you can provide some details, we’ll make the change!",
   "feedbackHint": "Your feedback",
   "feedbackButton": "Submit feedback",
-  "directMessageBotDesc": "Talking to humans is more fun but... AI is always ready!"
+  "directMessageBotDesc": "Talking to humans is more fun but... AI is always ready!",
+  "inviteYourFriends": "Invite your friends",
+  "playWithAI": "Play with AI for now",
+  "courseStartDesc": "Pangea Bot is ready to go anytime!\n\n...but learning is better with friends!"
 }
